# ardrone_tools

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
launch/: interface.launch
multiple_drones/launch_files/: drone.launch  multiple.launch  spawn_X_quadrotors.launch
multiple_drones/scripts/: master_driver.sh  slave_driver.sh  wifi.sh
multiple_drones/wifi/: auto_connect.sh  old_auto.sh  upload.sh  wifi.ini
src/: main.py
src/modules/: __init__.py
src/modules/bots/: PID.py  __init__.py  alignment.py  ardrone.py  bot.py  calibration.py  sensors.py
src/modules/gui/: __init__.py  frames.py  gui.py  panels.py
src/modules/vision/: vision.py
